# bevy-atlas-loader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: sprite_sheets.atlasmap
examples/: load_atlas.rs
src/: definitions.rs  lib.rs  systems.rs
tests/: definition_as_asset.rs  integration_test.rs  manual_definition.rs  random.rs
tests/common/: mod.rs
